[gd_scene load_steps=8 format=3 uid="uid://dj37b2kuixv20"]

[ext_resource type="Script" uid="uid://bvql6pavq0yj" path="res://Scripts/Multiplayer.gd" id="1_gjsd6"]
[ext_resource type="PackedScene" uid="uid://ciimi8mjv1004" path="res://GameObj/GameWindow/field.tscn" id="2_276eh"]
[ext_resource type="Script" uid="uid://c82vdy3md1a2p" path="res://Scripts/sync_functions.gd" id="2_yikwi"]
[ext_resource type="Script" uid="uid://bms41whcjlhpa" path="res://Scripts/Game_Setup.gd" id="3_0d5q0"]
[ext_resource type="PackedScene" uid="uid://ce8st7wb6l6ju" path="res://GameObj/PlayerObjs/playerZones.tscn" id="3_wmk42"]
[ext_resource type="Script" uid="uid://cyfvsw6dc8p3a" path="res://Scripts/input_manager.gd" id="4_276eh"]
[ext_resource type="PackedScene" uid="uid://c6gl57k40v4qq" path="res://GameObj/RivalObjs/rivalZones.tscn" id="4_jbur0"]

[node name="ConnectionWindow" type="Node2D"]
script = ExtResource("1_gjsd6")
gameField = ExtResource("2_276eh")
playerZones = ExtResource("3_wmk42")
rivalZones = ExtResource("4_jbur0")

[node name="SyncFunctions" type="Node2D" parent="."]
script = ExtResource("2_yikwi")

[node name="Game" type="Node2D" parent="."]
script = ExtResource("3_0d5q0")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("4_276eh")

[node name="Back" type="Button" parent="."]
offset_left = 5.0
offset_top = 992.0
offset_right = 180.0
offset_bottom = 1069.0
text = "Back"

[node name="OpenGames" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 160.0
offset_top = 140.0
offset_right = 1760.0
offset_bottom = 940.0

[node name="ScrollContainer" type="ScrollContainer" parent="OpenGames"]
custom_minimum_size = Vector2(1600, 800)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="OpenGames/ScrollContainer"]
custom_minimum_size = Vector2(1600, 800)
layout_mode = 2

[node name="CreateRoom" type="Button" parent="."]
offset_left = 1540.0
offset_top = 25.0
offset_right = 1740.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 30
text = "Create Room"

[node name="PasswordLabel" type="RichTextLabel" parent="."]
offset_left = 850.0
offset_top = 30.0
offset_right = 1010.0
offset_bottom = 110.0
theme_override_font_sizes/normal_font_size = 30
text = "Password:"
vertical_alignment = 1

[node name="Password" type="LineEdit" parent="."]
offset_left = 1000.0
offset_top = 30.0
offset_right = 1500.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 30

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CreateRoom" to="." method="_on_create_room_pressed"]
